Melhorando usabilidade no cadastro

--- a/Acervo/src/acervo/Cadastro.form
+++ b/Acervo/src/acervo/Cadastro.form
@@ -36,9 +36,9 @@
                   <Component id="labelTelaCadastro" alignment="0" max="32767" attributes="0"/>
                   <Component id="labelNome" alignment="0" max="32767" attributes="0"/>
                   <Component id="cadastroNome" alignment="0" max="32767" attributes="0"/>
-                  <Component id="labelUsuario" alignment="0" max="32767" attributes="0"/>
-                  <Component id="cadastroUsuario" alignment="0" max="32767" attributes="0"/>
-                  <Component id="labelUsuario1" alignment="0" max="32767" attributes="0"/>
+                  <Component id="labelLogin" alignment="0" max="32767" attributes="0"/>
+                  <Component id="cadastroLogin" alignment="0" max="32767" attributes="0"/>
+                  <Component id="labelSenha" alignment="0" max="32767" attributes="0"/>
                   <Component id="cadastroSenha" alignment="0" max="32767" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
@@ -55,11 +55,11 @@
               <EmptySpace max="-2" attributes="0"/>
               <Component id="cadastroNome" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="labelUsuario" min="-2" max="-2" attributes="0"/>
+              <Component id="labelLogin" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="cadastroUsuario" min="-2" max="-2" attributes="0"/>
+              <Component id="cadastroLogin" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="labelUsuario1" min="-2" max="-2" attributes="0"/>
+              <Component id="labelSenha" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="cadastroSenha" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
@@ -88,17 +88,17 @@
     </Component>
     <Component class="javax.swing.JTextField" name="cadastroNome">
     </Component>
-    <Component class="javax.swing.JLabel" name="labelUsuario">
+    <Component class="javax.swing.JLabel" name="labelLogin">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Usu&#xe1;rio:"/>
+        <Property name="text" type="java.lang.String" value="Login:"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="cadastroUsuario">
+    <Component class="javax.swing.JTextField" name="cadastroLogin">
       <Events>
         <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="validaTamanhoString"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JLabel" name="labelUsuario1">
+    <Component class="javax.swing.JLabel" name="labelSenha">
       <Properties>
         <Property name="text" type="java.lang.String" value="Senha:"/>
       </Properties>
