--- a/Acervo/src/acervo/Perfil.form
+++ b/Acervo/src/acervo/Perfil.form
@@ -128,6 +128,9 @@
         <Property name="text" type="java.lang.String" value="Buscar livro"/>
         <Property name="toolTipText" type="java.lang.String" value=""/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="buscarLivros"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JSeparator" name="jSeparator3">
     </Component>
